<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.HomeFragment">

    <TextView
        android:id="@+id/tv_income_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_income"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.33" />

    <TextView
        android:id="@+id/tv_income_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="10,000"
        android:textAlignment="center"
        android:textColor="@color/button_pressed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_income_title"
        app:layout_constraintWidth_percent="0.33" />

    <TextView
        android:id="@+id/tv_expense_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/tv_income_title"
        app:layout_constraintTop_toTopOf="@id/tv_income_title"
        app:layout_constraintWidth_percent="0.33" />

    <TextView
        android:id="@+id/tv_expense_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="5,000"
        android:textAlignment="center"
        android:textColor="@color/red"
        app:layout_constraintStart_toEndOf="@id/tv_income_title"
        app:layout_constraintTop_toBottomOf="@id/tv_expense_title"
        app:layout_constraintWidth_percent="0.33" />

    <TextView
        android:id="@+id/tv_total_budget_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/total_tv"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/tv_expense_title"
        app:layout_constraintTop_toTopOf="@id/tv_income_title"
        app:layout_constraintWidth_percent="0.33" />

    <TextView
        android:id="@+id/tv_total_remaining_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="5,000"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/tv_expense_title"
        app:layout_constraintTop_toBottomOf="@id/tv_total_budget_title"
        app:layout_constraintWidth_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:layout_weight="1"
        android:background="@color/horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_guideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_guideline" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/add_float_btn"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>